fixing jumpy video cover

--- a/styles/scss/projectPages/_projectPages.module.scss
+++ b/styles/scss/projectPages/_projectPages.module.scss
@@ -65,18 +65,15 @@
         .videoOverlay{
             position: relative;
             // display: block;
-            background-size: contain;
+            background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
             z-index: 5656565656;
             width: 100%;
             height: 100%;
-            
-            max-width: 100%;
-            max-height: 100%;
             @media screen and (min-width: $l){
                 max-width: 560px;
-                max-height: 450px;
+                max-height: 470px;
             }
 
             &.hideOverlay{
